# MathDoc

./: .gitignore  Cargo.toml  GUIDE.md  LICENSE  README.md  REPORT.md  pyproject.toml
editors/vscode/: language-configuration.json  mdc-mdoc-0.1.0.vsix  package.json
editors/vscode/syntaxes/: mdoc.tmLanguage.json
src/: config.rs  lib.rs  main.rs  workspace.rs
src/cli/: cmd_core.rs  cmd_deps.rs  cmd_eval.rs  cmd_graph.rs  cmd_tui.rs  cmd_web.rs  cmd_work.rs  mod.rs
src/compiler/: latex.rs  lean.rs  mod.rs  natl.rs  py.rs  python.rs  rocq.rs  text.rs
src/core/: algorithms.rs  mod.rs  models.rs
src/depgraph/: mod.rs  query.rs  state.rs  workback.rs
src/indcache/: discovery.rs  mod.rs  queries.rs  refresh.rs  schema.rs
src/mathdoc/: __init__.py  cli.py  codeblock.py  config.py  depgraph.py  filenode.py  fnode.py  indcache.py  mdochead.py  mdocnode.py  srcblock.py  utils.py
src/mathdoc/cli/: __init__.py  cmd_core.py  cmd_deps.py  cmd_eval.py  cmd_graph.py  common.py  parser.py  presenters.py
src/mathdoc/compiler/: __init__.py  base.py  comp_latex.py  comp_lean.py  comp_natl.py  comp_py.py  registry.py
src/mathdoc/core/: __init__.py  algorithms.py  exceptions.py  models.py
src/mathdoc/depgraph/: __init__.py  algorithms.py  evaluate.py  graph.py  issues.py  loading.py  models.py  query.py  report.py  state.py  utils.py
src/mathdoc/indcache/: __init__.py  cache.py  discovery.py  queries.py  refresh.py  schema.py
src/mathdoc/ui/: __init__.py  interactive.py  models.py  terminal.py  theme.py
src/mdoc/: mod.rs  node.rs
src/mdocnode/: node.rs
src/web/: api.rs  assets.rs  mod.rs  server.rs
test/: sample.toml  test_cli.py  test_codeblock.py  test_config.py  test_depgraph.py  test_indcache.py  test_mdocnode.py  ui_preview_terminal.py
tests/: test_algorithms.rs  test_config.rs  test_depgraph.rs  test_indcache.rs  test_mdocnode.rs  test_web_api.rs  test_workback.rs  test_workspace.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  main.ts
web/src/components/: AddBlockControl.svelte  AddDepOverlay.svelte  BlockEditor.svelte  EditorPane.svelte  ForceGraph.svelte  NewNodeOverlay.svelte  NodeColumn.svelte  RmDepOverlay.svelte  SearchOverlay.svelte
web/src/lib/: api.ts  cm-shiki.ts  format.ts  shiki.ts  state.svelte.ts  types.ts
