[package]
name = "mathdoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdc"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
thiserror = "2"
anyhow = "1"
toml = "0.8"
which = "6"
regex = "1"

[dev-dependencies]
tempfile = "3"
