[package]
name = "mathdoc"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "mdc"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
thiserror = "2"
anyhow = "1"
toml = "0.8"
which = "6"
regex = "1"
dialoguer = "0.12.0"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
