[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "mathdoc"
version = "0.3.0"
description = "dedicated math knowledge management tool"
readme = "README.md"
authors = [{ name = "sparkwenc", email = "sparkwenc@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
mdc = "mathdoc.cli:main"
